# dotfiles

./: .chezmoiexternal.toml  .chezmoiignore  .pre-commit-config.yaml  .tool-versions  README.md  dot_XCompose  dot_gitconfig  dot_wakatime.cfg.tmpl  dot_zprofile  dot_zshenv  dot_zshrc  dot_zshrc.tmpl  install.sh  pyproject.toml  run_once_after_finishing.sh.tmpl  run_once_after_import-gpg-keys.sh.tmpl  run_once_before_install-packages.sh  run_onchange_after_finish-installation.sh  run_onchange_after_finish-installation.sh.tmpl  run_onchange_after_import-keys.sh.tmpl  run_onchange_after_symlink-theme.sh  run_onchange_before_install-packages.sh  run_onchange_before_install-packages.sh.tmpl
.chezmoitemplates/: vscode_settings.jsonc
confs/: 10-monitor.conf  99-libinput-custom-config.conf
dot_config/: executable_swww.sh
dot_config/alacritty/: alacritty.toml  alacritty.yml
dot_config/bspwm/: executable_bspwmrc
dot_config/dunst/: dunstrc  executable_dunstrc
dot_config/eww/: eww.scss  eww.yuck
dot_config/eww/scripts/: executable_active_workspace.sh  (+6 more)
dot_config/hypr/: hyprland.conf
dot_config/i3/: config
dot_config/nvim/: init.lua
dot_config/picom/: picom.conf
dot_config/polybar/: colors.ini  config.ini  executable_launch.sh  modules.ini
dot_config/quickshell/: shell.qml
dot_config/rofi/: config.rasi
dot_config/swww/: executable_change_wallpaper.sh
dot_config/sxhkd/: sxhkdrc
dot_config/wezterm/: keys.lua  wezterm.lua  window_padding.lua
dot_config/zellij/: config.kdl
private_dot_ssh/: id_ed25519.pub  id_ed25519.pub.tmpl  private_id_ed25519.tmpl
(+46 files in other folders)
