[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "My personal configuration dotfiles."
authors = ["kyomi <me@kyomi.codes>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.1.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
